# codex-agy-bridge

./: .gitignore  AGENTS.md  AGENTS.md.disabled.20260619-200126  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO  coding-standard.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: ANTIGRAVITY_CLI_EXTENSION_REPORT.md  ARCHITECTURE.md  HIGH_RISK_OPTIMIZATION_PLAN.md  LEAN_AGY_WAIT_POLLING_PLAN.md  LEAN_CONTROL_PLANE_AND_WAIT_PLAN.md  LEAN_FOREGROUND_AGY_CLI_PLAN.md  LEAN_NEXT_PHASES.md  LIVE_MCP_STRESS_TEST_PLAN.md  MCP_VISION.md  STRESS_TEST_REPORT.md  V1_LIVE_TEST_DEFECTS.md  ZAI_REVIEW_REMAINING_WORK.md  v1_live_test.md
src/codex_agy_bridge/: __init__.py  _orchestrator.py  auth_flow.py  cli.py  core.py  diagnostics.py  exceptions.py  execution.py  expected_artifact.py  goal_scheduler.py  harness_contract.py  interactive_input.py  janitor.py  labels.py  lifecycle.py  orchestration.py  process.py  prompt_detector.py  review.py  run_cancellation.py  run_completion.py  run_control_snapshot.py  run_input_delivery.py  run_lifecycle.py  run_observation.py  run_request.py  run_results.py  runner.py  server.py  session_events.py  state.py  store.py  supervision.py  task_packet.py  terminal.py  terminal_evidence.py  transcript.py  waiter.py
tests/: conftest.py  test_cli.py  test_core.py  test_detached_run.py  test_diagnostics.py  test_exceptions.py  test_execution.py  test_goal_scheduler.py  test_goals.py  test_janitor.py  test_labels.py  test_lifecycle.py  test_mcp_stdio.py  test_orchestration.py  test_orchestrator.py  test_orchestrator_seams.py  test_process.py  test_prompt_detector.py  test_review.py  test_run_control_snapshot.py  test_run_observation.py  test_run_request.py  test_runner.py  test_server.py  test_session_events.py  test_state.py  test_store.py  test_stress_round1.py  test_stress_round2.py  test_supervision.py  test_terminal.py  test_transcript.py  test_v1_live.py  test_v1_soak_live.py  test_waiter.py
