[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-agy-bridge"
version = "0.1.0"
description = "Observable, resumable MCP bridge from Codex to Antigravity CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Varad" }]
dependencies = [
  "filelock>=3.18,<4",
  "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
codex-agy-bridge = "codex_agy_bridge.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_agy_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
